# claude-code-optimizer

./: README.md  claude-optimize.sh  claude-optimize.sh.mod  create_docs_pack.py  create_oss_pack.py  create_team_pack.py  pyproject.toml  refactor.py  split.py
.github/workflows/: release.yml
claudeoptimize/: __init__.py  wrapper.py
lib/: self_install.sh
lib/core/: colors.sh  deps.sh  io.sh  prompts.sh  status.sh  update.sh
lib/packs/: docs_pack.sh  oss_pack.sh  team_pack.sh
lib/setup/: global.sh  project.sh
templates/docs-pack/agents/: technical-writer.md
templates/docs-pack/commands/: docs-init.md  docs-sync.md  ticket-gen.md
templates/docs-pack/docs/: ARCHITECTURE.md  MEMORY_BANK.md  PRD.md
templates/global/: CLAUDE.md  claude_desktop_config.json  settings.json
templates/global/agents/: researcher.md  reviewer.md  tester.md
templates/global/commands/: budget-check.md  caveman-claude-md.md  chain-of-draft.md  claude-md-audit.md  commit.md  compress.md  context.md  debug.md  effort-high.md  effort-low.md  handoff.md  new-project.md  plan.md  refactor.md  review.md
templates/global/skills/: README.md
templates/project/: .claudeignore  .codesightignore  .mcp.json  .repomix.config.json  CLAUDE.md  DESIGN.md  MEMORY.md  settings.json  settings.local.json
templates/project/agents/: api-designer.md  db-migrator.md
templates/project/commands/: deploy.md  design.md  feature.md
templates/shared/schemas/: interfaces.md  team-config.md
templates/team-pack/: DEPLOYMENT.md
templates/team-pack/agents/: backend-specialist.md  database-specialist.md  (+5 more)
(+33 files in other folders)
